--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Potifólio</a>
+        <a href="#" class="logo"><img src="LogoVillaCor.png" alt="" class="logo"></a>
         
         <nav>
             <a href="#">Home</a>
-            <a href="#">Sobre Mim</a>
             <a href="#">Serviços</a>
-            <a href="#">Portifólio</a>
+            <a href="#">Inspirações</a>
+            <a href="#">Sobre Nós</a>
             <a href="#">Contato</a>
         </nav>
     </header>
+    <main>
+        <h1>wefwq</h1>
+    </main>
+
+
 
 </body>
 </html>
