--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Estilo/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 </head>
 <body>
 
@@ -25,44 +22,57 @@
         </nav>
     </header>
 
-    <main>
-        <section class="home">
-            <div id="home">
-                <h1>Cotinas, pesianas, toldos <br>e ombrelones</h1>
-                <button id="orçamento">
-                    <p id="butttonOrçemanto">Faça um Orçamento!</p>
-                </button>
-            </div>           
-        </section>
+    <section id="home">
+        <div id="title">
+            <h2>Cortinas, Persianas, Toldos e Ombrelones</h2>
+            <p>O de mais <span>moderno</span> para sua casa!</p>
+        </div>
+        <a href="#">
+            <button>
+                <p>Fale conosco</p>
+            </button>
+        </a>
+    </section>
+
+    <section id="diferenciais">
         
-        <section class="secsobre">
-            <div id="sobreimg">
-                <img src="Imagens/ombrelone.png" alt="">
-            </div>
-            <div id="sobreinfo">
-                <h3>Sobre Nós</h3>
-                <hr></hr>
-                
-            </div>
-        </section>
-    </main>
-
-    <footer>
+        <h2>Por que optar pela VillaCor?</h2>
         <hr>
-        <div id="footer">
-            <div class="logo">
-                <img src="LogoVillaCor.png" alt="">
-            </div>
-            <div id="sobre">
-                <p>Mais de 20 anos no mercado</p>
-            </div>
-            <div id="informaçao">
-                <h4>Mais informações</h4>
-                <p>Brasília/Goiânia</p>
 
+        <div class="centro" id="info">
+            <div class="info">
+                <h3>Modernização</h3>
+                <p>Usamos as melhores tecologias existentes no ramo, para melhor satisfazer nossos clientes!</p>
+            </div>
+            <div class="info">
+                <h3>Atendimento Personalizado</h3>
+                <p>Nosso atendimento é baseado na nescessidade do cliente, todos os nossos produtos são fabricados sob medida e personalizados conforme a sua vontade!</p>
+            </div>
+            <div class="info">
+                <h3>Custo Benefício</h3>
+                <p>Temos uma fábrica própria que nos ajuda a ofertar o melhor custo beneficio para você cliente!</p>
             </div>
         </div>
-    </footer>
+
+        <div class="centro" id="img">
+            <div id="img01">
+                <img src="Imagens/modernização02.jpeg" alt="">
+            </div>
+            <div id="img02">
+                <img src="Imagens/atendimento02.jpeg" alt="">
+            </div>
+            <div id="img03">
+                <img src="Imagens/custobeneficio02.jpeg" alt="">
+            </div>
+        </div>
+
+        <a href="#">
+            <button>
+                <p>Faça um Orçamento</p>
+            </button>
+        </a>
+    </section>
+
 
 </body>
 </html>
