Terminado o Site PC

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Estilo/style.css">
+    
 
 </head>
 <body>
@@ -168,25 +169,33 @@
 
         <div id="cont">
             <div id="bsb">
-                <p>BRASÍLIA</p>
-                <p>(61) 9 9605-5542</p>
-                <p>outlook</p>
-                <p>Segunda à Sexta (8:00 - 19:00)</p>
+                <p><i class="fa-solid fa-location-dot" style="color: #ffffff;"></i> BRASÍLIA</p>
+                <br>
+                <p><i class="fa-solid fa-phone" style="color: #ffffff;"></i> (61) 9 9605-5542</p>
+                <p><i class="fa-solid fa-envelope" style="color: #ffffff;"></i> junior.villacor@outlook.com</p>
+                <p><i class="fa-solid fa-clock" style="color: #ffffff;"></i> Segunda à Sexta (8:00 - 19:00)</p>
             </div>
             <div id="gyn">
-                <p>GOIÂNIA</p>
-                <p>(62) 9 8118-7033</p>
-                <p>junior.villacor@outlook.com</p>
-                <p>Segunda à Sexta (8:00 - 19:00)</p>
+                <p><i class="fa-solid fa-location-dot" style="color: #ffffff;"></i> GOIÂNIA</p>
+                <br>
+                <p><i class="fa-solid fa-phone" style="color: #ffffff;"></i> (62) 9 8118-7033</p>
+                <p><i class="fa-solid fa-envelope" style="color: #ffffff;"></i> junior.villacor@outlook.com</p>
+                <p><i class="fa-solid fa-clock" style="color: #ffffff;"></i> Segunda à Sexta (8:00 - 19:00)</p>
             </div>
         </div>
 
         <div id="redes">
-            <a href="">
-
+            <a href="https://www.instagram.com/villacorcortinas/" target="_blank">
+                <div id="insta" onmouseover="aparecerTxt();" onmouseout="reset();">
+                    <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+                    <p>Instagram</p>
+                </div>
             </a>
-            <a href="">
-
+            <a href="https://contate.me/villacor" target="_blank" >
+                <div id="wpp">
+                    <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>
+                    <p>Whatsapp</p>
+                </div>
             </a>
         </div>
 
@@ -195,6 +204,8 @@
     <footer>
         <p>Copyright 2023 © VillaCor Cortinas | Todos os direitos reservados.</p>
     </footer>
+
+    <script src="https://kit.fontawesome.com/b0311f3538.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
