Villa Cor mediaScreen

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h3>Modernização</h3>
                 <p>Usamos as melhores tecologias existentes no ramo, para melhor satisfazer nossos clientes!</p>
             </div>
-            <div class="info">
+            <div class="info" id="info03">
                 <h3>Atendimento Personalizado</h3>
                 <p>Nosso atendimento é baseado na nescessidade do cliente, todos os nossos produtos são fabricados sob medida e personalizados conforme a sua vontade!</p>
             </div>
@@ -83,15 +83,15 @@
             <hr>
             <div id="servimg">
                 <div class="servdiv">
-                    <img src="Imagens/Negocio.png" alt="">
+                    <img class="simg01" src="Imagens/Negocio.png" alt="">
                     <p>Vendemos cortinas, persianas, toldos e ombrelones planejados.</p>
                 </div>
                 <div class="servdiv">
-                    <img src="Imagens/Montagem.png" alt="">
+                    <img class="simg02" src="Imagens/Montagem.png" alt="">
                     <p>Visita tecnica, montagem, reparos e concertos, orçamento sem compromisso.</p>
                 </div>
                 <div class="servdiv">
-                    <img src="Imagens/Fabricação.png" alt="">
+                    <img class="simg03" src="Imagens/Fabricação.png" alt="">
                     <p>Fabricamos todos os produtos oferecidos.</p>
                 </div>
             </div>
