--- a/index.html
+++ b/index.html
@@ -58,13 +58,10 @@
 
         <div id="img">
             <div id="img01">
-                <img src="Imagens/modernização02.jpeg" alt="">
             </div>
             <div id="img02">
-                <img src="Imagens/atendimento02.jpeg" alt="">
             </div>
             <div id="img03">
-                <img src="Imagens/custobeneficio02.jpeg" alt="">
             </div>
         </div>
 
@@ -76,25 +73,34 @@
     </section>
     
     <section id="serviços">
-        <p>Deixe sua casa pronta para receber seus amigos e familiares.</p>
+        <p id="principal">Deixe sua casa pronta para receber seus amigos e familiares.</p>
+
         <div id="serv">
             <a name="Serviços" href=""></a>
             <h2>SERVIÇOS</h2>
             <hr>
-            <div id="servimg">
-                <div class="servdiv">
-                    <img class="simg01" src="Imagens/Negocio.png" alt="">
+
+            <div id="img">
+                <div class="imgServ" id="simg01">
+                </div>
+                <div class="imgServ" id="simg02">
+                </div>
+                <div class="imgServ" id="simg03">
+                </div>
+            </div>
+
+            <div id="servdiv">
+                <div class="pinfo">
                     <p>Vendemos cortinas, persianas, toldos e ombrelones planejados.</p>
                 </div>
-                <div class="servdiv">
-                    <img class="simg02" src="Imagens/Montagem.png" alt="">
+                <div class="pinfo">
                     <p>Visita tecnica, montagem, reparos e concertos, orçamento sem compromisso.</p>
                 </div>
-                <div class="servdiv">
-                    <img class="simg03" src="Imagens/Fabricação.png" alt="">
+                <div class="pinfo">
                     <p>Fabricamos todos os produtos oferecidos.</p>
                 </div>
             </div>
+
         </div>
 
         <div id="icons">
@@ -145,9 +151,9 @@
         <h2>SOBRE NÓS</h2>
         <hr>
         <div id="imgetxt">
-            <div id="sbrimg">
-                <img src="Imagens/WhatsApp Image 2023-03-29 at 14.41.35 (2).jpeg" alt="">
-            </div>
+
+            <div id="sbrimg"></div>
+
             <div id="sbrtxt">
                 <p>Atuando com excelência no mercado de cortinas e persianas a mais de 20 anos, a VillaCor surgiu partir da vontade de fornecer um atendimento diferenciado, prezando o respeito, competência, qualidade e confiança, habilidades que adquirimos durante nossa longa caminhada. Nós te mostramos, através de muito empenho, que é possível transformar aquilo que sempre sonhou em realidade. <br><br>
                 Uma jornada de anos encarando diversos projetos desafiadores, e milhares de clientes ao nosso lado. Nosso foco é único e claro: trazer satisfação aos nossos parceiros, realizando seus sonhos com expertise e eficiência, prezando sempre pela qualidade do nosso serviço.</p>
